# Blender

./: .hgignore  CMakeLists.txt  README
source/blender/blenfont/: CMakeLists.txt
source/blender/blenkernel/: CMakeLists.txt
source/blender/editors/animation/: CMakeLists.txt
source/blender/editors/armature/: CMakeLists.txt
source/blender/editors/gpencil/: CMakeLists.txt
source/blender/editors/interface/: CMakeLists.txt
source/blender/editors/mask/: CMakeLists.txt
source/blender/editors/mesh/: CMakeLists.txt
source/blender/editors/physics/: CMakeLists.txt
source/blender/editors/render/: CMakeLists.txt
source/blender/editors/screen/: CMakeLists.txt
source/blender/editors/sculpt_paint/: CMakeLists.txt
source/blender/editors/space_action/: CMakeLists.txt
source/blender/editors/space_buttons/: CMakeLists.txt
source/blender/editors/space_clip/: CMakeLists.txt
source/blender/editors/space_console/: CMakeLists.txt
source/blender/editors/space_file/: CMakeLists.txt
source/blender/editors/space_graph/: CMakeLists.txt
source/blender/editors/space_image/: CMakeLists.txt
source/blender/editors/space_info/: CMakeLists.txt
source/blender/editors/space_logic/: CMakeLists.txt
source/blender/editors/space_nla/: CMakeLists.txt
source/blender/gpu/: CMakeLists.txt
source/blender/gpu/intern/: gpu_draw.c  (+4 more)
source/blender/modifiers/: CMakeLists.txt
source/blender/nodes/: CMakeLists.txt
source/blender/windowmanager/: CMakeLists.txt
source/blenderplayer/: CMakeLists.txt
source/creator/: CMakeLists.txt  creator.c  goglcontext.h
source/gameengine/BlenderRoutines/: BL_KetsjiEmbedStart.cpp  CMakeLists.txt  KX_BlenderGL.cpp  KX_BlenderRenderTools.cpp  qgamewindow.cpp  qgamewindow.h
source/gameengine/Expressions/: ListValue.cpp
source/gameengine/Ketsji/: BL_BlenderShader.cpp  BL_Shader.cpp  BL_Shader.h  BL_Texture.cpp  CMakeLists.txt  KX_BlenderMaterial.cpp  KX_BlenderMaterial.h  KX_Dome.cpp  KX_GameObject.cpp  KX_PolygonMaterial.h  KX_PythonInit.cpp  KX_PythonSeq.cpp  KX_Scene.cpp  KX_VertexProxy.cpp
source/gameengine/Rasterizer/: CMakeLists.txt  RAS_2DFilterManager.cpp  RAS_IPolygonMaterial.h  RAS_MaterialBucket.cpp  RAS_TexVert.cpp  RAS_TexVert.h
source/gameengine/VideoTexture/: CMakeLists.txt  Texture.cpp
(+25 files in other folders)
